<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/white">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/splash_screen"
        android:layout_marginBottom="12dp" />

    <!-- Title -->
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_tracker"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@android:color/black"
        android:drawableStart="@android:drawable/ic_dialog_email"
        android:padding="12dp"
        android:background="@drawable/edittext_background"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@android:color/black"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:padding="12dp"
        android:background="@drawable/edittext_background"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <!-- Signup Link -->
    <TextView
        android:id="@+id/signupLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textSize="14sp"
        android:textColor="@color/black" />

</LinearLayout>
